# bandabi

./: .gitignore  README.md  ai_refactor_loop.sh  bandabi_v1_context_map.md  eslint.config.mjs  git_push.txt  package.json  pyproject.toml  requirements.txt
.continue/agents/: new-config.yaml
.continue/prompts/: new-prompt.md
.github/workflows/: ci.yml
apps/dev_ui/: next.config.ts  package-lock.json  package.json  tsconfig.json
apps/user_ui/: package-lock.json  package.json
bandabi/: __init__.py  cli.py  clustering.py  config.py  demand.py  logging_utils.py  metrics.py  pipeline.py  road_network.py  time_model.py
bandabi/routing/: road_router.py  route_solver.py  tsp.py
configs/: base.yaml
configs/baselines/: cluster_first.yaml  greedy.yaml  local_search.yaml
configs/scenarios/: demand_spike.yaml  rush_hour.yaml  seoul_allgu_v1.yaml  spatial_skew.yaml  tight_constraints.yaml  wheelchair_heavy.yaml
configs/sweeps/: base18_single.yaml  phase1_time_mult.yaml  phase2_routing_improve.yaml  phase2_tabu_iters.yaml  phase3_clustering_strategy.yaml
data/: centers.xlsx
db/: devui.sqlite
docs/: data_contract.md  flow.md
legacy/: bandabi_minimal_map (2).html  clustering.py  config.py  dummy_generator.py  graph_and_distance.py  main.py  routing.py  visualize_map.py
scripts/: build_edge_cases.py  build_routes_stops.py  build_seoul_graph.py  render_route_map.py  run_base18.ps1  smoke_road_time.py  verify.ps1  verify.sh
src/: demand.py  io_utils.py  metrics.py  pipeline.py  route_solver.py  runner.py  time_model.py
tests/: test_smoke.py
(+44 files in other folders)
